assets/scss/molecules/cards/_publication-featured-card.scss
.publication-featured-card {

    @include breakpoint(medium down) {
        top: 0;
        width: 100%;
        max-width: 100%;
        margin-bottom: 0;
        padding-bottom: 0;
        position: relative;
    }

    .heading.h2 {
        display: none;
    }

    @include breakpoint(small only) {
        .heading.h2 {
            display: block;
            margin-top: 40px;
            padding-left: 25px;
            margin-bottom: 30px;
        }
    }

    .publication-image {
        max-width: 100%;

        @include breakpoint(medium down) {
            padding: 40px;
            margin: 0 auto;
            max-width: 425px;

            &::before {
                left: 25px;
                right: 70px;
                height: 15px;
                bottom: 40px;
                filter: blur(5px);
            }
        }

        .image {
            min-height: 0;
            max-width: none;
        }
    }

    .publication-social {
        padding: 35px 30px;
        background: $dark-blue-6;

        @include breakpoint(medium down) {
            margin: 0 auto;
            max-width: 425px;
        }

        .social-container {
            align-items: center;

            .download-btn {
                cursor: pointer;
                align-items: center;


                @include breakpoint(small only) {
                    width: 100%;
                    padding-bottom: 25px;
                    border-bottom: 1px solid $dark-blue-19;
                }

                .path2, .path4 {
                    transform: translate(0);
                    transition: transform $easing-2;
                }

                &:hover {

                    .path2 {
                        transform: translate(0px, -3px);
                    }
                    .path4 {
                        transform: translate(0px, -2px);
                    }
                }
            }

            .download {
                font-size: 1.5rem;
                font-weight: $bold;
                text-transform: uppercase;
            }

            .icon-download {
                margin-left: 15px;
            }

            .social-icons {
                display: flex;
                justify-content: space-between;

                @include breakpoint(small only) {
                    padding-top: 25px;
                }

                .icon-item {
                    width: 22px;

                    .fill {
                        color: $black;
                    }
                }
            }
        }
    }
}

